--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/icons8-brain-48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nithya P.K|counselling psychologist</title>
-  </head>
+    <title>Nithya PK|counselling psychologist</title>
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
